Charts/cm-db-migrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-db-migrator
  namespace: nha-app
  labels:
    app: cm-db-migrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm-db-migrator
  template:
    metadata:
      labels:
        app: cm-db-migrator
    spec:
      containers:
      - name: cm-db-migrator
        image: projecteka/cm-db-initializer
        imagePullPolicy: Always
