Charts/cm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consent-manager
  namespace: nha-app
  labels:
        app: consent-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consent-manager
  template:
    metadata:
      labels:
        app: consent-manager
    spec:
      containers:
      - name: consent-manager
        image: ganesan92/consent-manager:92f47fd
        ports:
          - name: http
            containerPort: 8000
            protocol: TCP
