Charts/cm-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: consent-manager
  namespace: nha-app
spec:
  gateways:
  - nha-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /consent-manager/
    rewrite:
      uri: /
    route:
    - destination:
        host: consent-manager.nha-app.svc.cluster.local
        port:
          number: 8000
